src/components/styles/CharacterCard.css
.character-card {
    /* aspect-ratio: 43 / 21; */
    width: 860px;
    transform-origin: 50% 0;
    transform: scale(var(--scale));
    position: relative;
}
.cc-grid {
    width: 100%;
    height: 100%;
    position: relative;
    display: grid;
    /* grid-template-columns: 1.5fr 2fr 1fr;
    grid-template-rows: 2fr 1fr 1.5fr; */

    grid-template-columns: 258px 2fr 1fr;
    grid-template-rows: 64px 2fr 1fr 128px;
    grid-column-gap: 0px;
    grid-row-gap: 0px;
}

.cc-sub-stats {
    height: 28px;
    padding: 4px;
    background-color: var(--mantine-color-dark-8);
    z-index: 100;
    display: flex;
    flex-wrap: nowrap;
    gap: 8px;
    justify-content: flex-end;
}

.cc-sub-stats > div[data-count^="*"] {
    color: var(--mantine-color-gray-6);
}

.cc-sub-stats > div[data-count^="***"] {
    color: var(--mantine-color-gray-4);
}
.cc-sub-stats > div[data-count^="*****"] {
    color: var(--mantine-color-gray-1);
}

.cc-vignette {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    grid-area: 3 / 1 / 5 / 4;
    height: 200px;
    background: linear-gradient(0deg, rgba(0 0 0 / 75%), transparent);
    z-index: 0;
}

.cc-cell {
    padding: 8px 12px 0px 12px;
}

.cc-image {
    grid-area: 1 / 1 / 5 / 2;
    background-size: 8px;
    background-image: url("/assets/pattern.png"),
        linear-gradient(var(--accent), color-mix(in oklab, black 100%, var(--accent) 100%));
}
.cc-image > img {
    image-rendering: optimizeQuality !important;
}

.cc-info-bg {
    grid-area: 1 / 2 / 5 / 4;
    background-size: 8px;
    background-image: url("/assets/pattern2.png"),
        linear-gradient(135deg, #353535, #252525);
    box-shadow: 0 0 64px rgb(0 0 0 / 50%);
}

.cc-info {
    grid-area: 1 / 2 / 2 / 4;
    position: relative;
}
.cc-info > * {
    color: white;
}
/* .cc-user {
    grid-area: 1 / 3 / 2 / 4;
} */

html[lang="de"] .cc-character-name,
html[lang="pt"] .cc-character-name,
html[lang="vi"] .cc-character-name {
    font-size: 1.125rem;
}

.cc-level, .cc-mindscape {
    height: 100%;
    background-color: var(--mantine-color-dark-9);
}
.cc-level {
    border-radius: 16px 0 0 16px;
    padding: 0 8px 0 8px;
    clip-path: polygon(0 0, 100% 0, calc(100% - 8px) 100%, 0% 100%);
}
.cc-mindscape {
    border-radius: 0 16px 16px 0;
    padding: 0 2px 0 8px;
    margin-left: -6px;
    clip-path: polygon(8px 0, 100% 0, 100% 100%, 0 100%);
}

.cc-weapon {
    height: 52px;
    background-color: var(--mantine-color-dark-7);
    border-radius: 26px 8px 8px 26px;
    padding-right: 4px;
}
.cc-weapon-icon {
    position: relative;
    aspect-ratio: 1;
    background-color: var(--mantine-color-dark-9);
    border-radius: 26px;
    box-shadow: inset -2px 2px 8px var(--accent);
}
.cc-weapon-icon img:first-child {
    height: 52px;
}
.cc-weapon-icon img:last-child {
    position: absolute;
    bottom: 0;
    right: 0;
    height: 16px;
}
.cc-weapon-stat {
    background-color: var(--mantine-color-dark-9);
    padding: 2px 4px;
    border-radius: 10px 5px 10px 5px;
    box-shadow: 0.5px 0.5px 0 0.5px var(--accent);
}
.cc-weapon-stat.level {
    height: 14px;
    border-radius: 7px 4px 7px 4px;
}

.cc-stats {
    grid-area: 2 / 2 / 3 / 3;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-template-rows: repeat(6, 1fr);
    grid-auto-flow: column;
    gap: 8px;
}
.cc-stat * {
    font-size: 9px;
}
html[lang="ru"] .cc-stat *,
html[lang="fr"] .cc-stat * {
    font-size: 8px;
}
.cc-stat {
    color: white;
    height: 16px;
    background-color: var(--mantine-color-dark-7);
    border-radius: 8px 4px 8px 4px;
    display: grid;
    grid-template-columns: auto 1fr auto;
    grid-template-rows: 1fr;
    padding: 2px 4px;
    box-shadow: 1px 1px 0 var(--accent);
}

.cc-stat > *:nth-child(1) {
    grid-area: 1 / 1 / 2 / 2;
}
.cc-stat > *:nth-child(2) {
    grid-area: 1 / 2 / 2 / 3;
}
.cc-stat > *:nth-child(3) {
    grid-area: 1 / 3 / 2 / 4;
}

.cc-highlight {
    color: var(--accent) !important;
}

.cc-skills {
    grid-area: 3 / 2 / 4 / 3;
    display: grid;
    grid-template-columns: repeat(2, 1fr);
}
.cc-core {
    width: 190px;
}
.cc-core > * {
    padding: 0 10px;
    margin-left: -2px;
    height: 20px;
    clip-path: polygon(10% 0, 100% 0, 90% 100%, 0 100%);
}
.cc-core > *:first-child {
    margin-left: unset;
    clip-path: polygon(0 0, 100% 0, 90% 100%, 0 100%);
    border-radius: 10px 0 0 10px;
}
.cc-core > *:last-child {
    clip-path: polygon(10% 0, 100% 0, 100% 100%, 0 100%);
    border-radius: 0 10px 10px 0;
}

.cc-talents {
    position: relative;
    height: 40px;
    background: linear-gradient(0deg, var(--mantine-color-dark-9), var(--mantine-color-dark-5));
    border-radius: 20px;
}
.cc-talents::before {
    content: "";
    position: absolute;
    height: 38px;
    width: calc(100% - 2px);
    border-radius: 20px;
    background: linear-gradient(0deg, var(--mantine-color-dark-5), var(--mantine-color-dark-9));
}
.cc-talent {
    position: relative;
    display: flex;
    align-items: center;
}
.cc-talent * {
    font-size: 6px;
}
.cc-talents.boosted .cc-talent-level {
    color: var(--mantine-color-yellow-5);
}
.cc-talent-level {
    font-family: "zzz-jp", monospace !important;
    /* letter-spacing: -1px; */
    color: white;
    position: absolute;
    bottom: -1px;
    left: 50%;
    text-align: center;
    /* voodoo abs positioned element centering hack  */
    transform: translateX(-50%); 
    padding: 0 6px;

    background-color: var(--mantine-color-dark-9);
    border-radius: 2px;
    box-shadow: 0 0 8px rgb(0 0 0 / 50%);
}

.cc-disc-set {
    color: white;
    height: 18px;
    display: grid;
    grid-template-columns: auto 1fr auto;
    grid-template-rows: 1fr;
    align-items: center;
    gap: 4px;
    background-color: rgba(0 0 0 / 75%);
    border-radius: 12px 6px 12px 12px;
    padding: 0 4px 0 0;
    margin-left: 4px;
    z-index: 100;
}

.cc-disc-set > *:nth-child(1) {
    grid-area: 1 / 1 / 2 / 2;
}
.cc-disc-set > *:nth-child(2) {
    grid-area: 1 / 2 / 2 / 3;
    width: 100%;
}
.cc-disc-set > *:nth-child(3) {
    grid-area: 1 / 3 / 2 / 4;
}


.cc-discs {
    grid-area: 4 / 1 / 5 / 4;
    z-index: 100;

    display: flex;
    justify-content: center;
    align-items: flex-end;
}

.cc-discs-grid {
    width: calc(100% - 24px);
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    justify-items: center;
    gap: 8px;
    margin-bottom: 8px;
}

.cc-graph {
    grid-area: 2 / 3 / 3 / 4;
}

.cc-teams {
    grid-area: 3 / 3 / 4 / 4;
    position: relative;
    z-index: 1000;
    color: white;
}

.cc-user {
    grid-area: 1 / 3 / 4 / 4;
    position: relative;
    color: white;
    font-family: "zzz";
}

.cc-info-user {
    position: absolute;
    top: 4px;
    right: 8px;
    text-align: right;
}

.cc-cv {
    position: absolute;
    bottom: 0;
    right: 8px;
}

.character-img {
    height: 100%;
    width: 100%;
    background-repeat: no-repeat;
    background-position: center top;
}

.cc-leaderboard {
    grid-area: 1 / 3 / 4 / 4;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.cc-stats-graph {
    width: 192px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 52px;
    margin-right: 8px;
}
.cc-stats-graph * {
    font-family: "zzz", "zzz-jp", sans-serif;
    overflow: visible;
    font-size: 6px;
    color: white;
    z-index: 100;
}
.cc-graph-lb {
    color: white;
    font-family: "zzz-jp", monospace;
    font-size: 8px;
    padding: 2px 4px;
    border-radius: 2px;
    background-color: color-mix(in oklab, black 10%, var(--accent) 100%);
}

